Added Eric's changed (intro and first part of methods)

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -29,7 +29,7 @@
 \affiliation[Brown University]{Brown University, School of Engineering, Providence, RI, USA}
 
 % title
-\title{Transient Variability In Vapor Intrusion And The Factors That Influence It}
+\title{Temporal Variations In Vapor Intrusion Induced Indoor Air Contaminant Concentrations }
 
 % keywords
 \abbreviations{VI}
@@ -44,64 +44,73 @@
 \section{Introduction}
 
 Long term vapor intrusion (VI) studies in both residential and larger commercial structures have raised concerns regarding significant observed transient behavior in indoor air contaminant concentrations\cite{u.s._environmental_protection_agency_oswer_2015,folkes_observed_2009,holton_temporal_2013,johnston_spatiotemporal_2014,hosangadi_high-frequency_2017,mchugh_recent_2017,u.s._environmental_protection_agency_assessment_2015}.
-VI involves the migration of volatilizing contaminants from soil, groundwater or other subsurface sources into overlying structures. VI has been a recognized problem for some time, but many aspects remain poorly understood, particularly with respect to the causes of large temporal transients in indoor air concentrations.
-There is uncertainty within the VI community regarding how to best develop sampling strategies to address this problem\cite{u.s._environmental_protection_agency_oswer_2015,holton_temporal_2013,johnson_integrated_2016}. \par
+Such variations make it difficult for those charged with protecting human health to formulate a response should evaluation of the risk of exposure be based upon observed peak concentrations, or long-term averages, or something else?
+There is even uncertainty within the VI community regarding how to best develop sampling strategies to address this problem\cite{u.s._environmental_protection_agency_oswer_2015,holton_temporal_2013,johnson_integrated_2016}.
+What represents a reasonable sampling strategy for a particular site a single 8 hr sample?
+Repeated 8 hr samples?
+Month-long samples?
+Continuous monitoring?
 
+VI involves the migration of volatilizing contaminants from soil, groundwater or other subsurface sources into overlying structures.
+The basic nature of VI has been understood for some time and it has been the subject of much study, but some aspects remain poorly understood, such as the causes of the sometimes observed large temporal transients in indoor air concentrations.
 Results from a house operated by Arizona State University (ASU) near Hill AFB in Utah, an EPA experimental house in Indianapolis, IN and a large warehouse at the Naval Air Station (NAS) North Island, CA have all shown significant transient variations in indoor air contaminant concentrations.
 All were outfitted with sampling and monitoring equipment that allowed tracking temporal variation in indoor air contaminant concentrations on time scales of hours.
-All have shown that these concentrations varied significantly with time - orders of magnitude on the timescale of a day or days.
-\cite{holton_evaluation_2015,guo_vapor_2015,hosangadi_high-frequency_2017}. \par
+All have shown that these concentrations vary significantly with time - orders of magnitude on the timescale of a day or days\cite{holton_evaluation_2015,guo_vapor_2015,hosangadi_high-frequency_2017}.
 
-In one instance the source of the variation was clearly established during the study; at the ASU house a field drain pipe (or “land drain”), which connected to a sewer system, was discovered beneath the house, and careful isolation of this source led to a clear conclusion that this preferential pathway significantly contributed to observed indoor air contaminant levels and their fluctuations\cite{guo_vapor_2015,guo_identification_2015}.
-While in this case the issue of a contribution from a preferential pathway was clearly resolved, what it left open was a question of whether existence of such a preferential pathway to an area beneath a structure would always be expected to lead to large fluctuations in indoor air contaminant concentrations. \par
+In one instance the source of the variation was clearly established during the study of the site.
+At the ASU house a drain pipe (or “land drain”) connected to a sewer system was discovered beneath the house.
+Careful isolation of this source led to a clear conclusion that this “preferential pathway” for contaminant vapor migration significantly contributed to observed indoor air contaminant levels and their fluctuations\cite{guo_vapor_2015,guo_identification_2015}.
+While in this case the issue of a contribution from a preferential pathway was clearly resolved, what it left open was a question of whether existence of such a preferential pathway would always be expected to lead to large fluctuations in indoor air contaminant concentrations.
 
 Similarly, a sewer pipe has recently been suggested to be a source of the contaminants found in the EPA Indianapolis house.
 That site was also characterized by large indoor air contaminant concentration fluctuations\cite{mchugh_evidence_2017,u.s._environmental_protection_agency_assessment_2015}.
-Sewer lines have been generally implicated as VI sources at several sites\cite{pennell_sewer_2013,mchugh_evidence_2017,roghani_occurrence_2018,riis_vapor_2010}.
-A Danish study estimate that roughly 20\% of all VI sites in central Denmark involve significant sewer VI pathways\cite{nielsen_remediation_2017}.
-Thus while the consideration of a role of possible sewer or other preferential pathways is now part of normal good practice in VI site investigation\cite{u.s._environmental_protection_agency_oswer_2015}, it is still not known whether the existence of such pathways automatically means that large temporal fluctuations are necessarily to be expected.
-In some of these cited cases\cite{pennell_sewer_2013,riis_vapor_2010}, a sewer provided a pathway for direct entry of contaminant into the living space.
-While potentially important in many cases, this scenario is not further considered here, where the focus is on pathways that deliver contaminant via the soil beneath a structure. \par
+Sewer lines have been previously implicated as VI sources at several sites\cite{pennell_sewer_2013,mchugh_evidence_2017,roghani_occurrence_2018,riis_vapor_2010}.
+A Danish study has estimated that roughly 20\% of all VI sites in central Denmark involve significant sewer VI pathways\cite{nielsen_remediation_2017}.
+Thus while consideration of sewer or other preferential pathways is now part of normal good practice in VI site investigation\cite{u.s._environmental_protection_agency_oswer_2015}, it is still not known whether the existence of such pathways automatically means that large temporal fluctuations are necessarily to be expected.
 
+In some of the above cited cases\cite{pennell_sewer_2013,riis_vapor_2010}, a sewer provided a pathway for direct entry of contaminant into the living space.
+While potentially important in many instances, this scenario is not further considered here where the focus is on pathways that deliver contaminant via the soil beneath a structure.
 It is, however, now known that even absent a preferential pathway, there may be significant transient variation in indoor air contaminant concentrations at VI sites\cite{folkes_observed_2009,brenner_results_2010,johnston_spatiotemporal_2014}.
-One example is a site at NAS North Island at which no preferential pathways have been identified.
+One example is the site at NAS North Island at which no preferential pathways have been identified.
 Instead, a building at this site is characterized by significant temporal variations in indoor-outdoor pressure differential\cite{hosangadi_high-frequency_2017}.
-It is believed that this is the origin of the observed indoor air contaminant concentration fluctuations at that site. \par
+It is believed that this is the origin of the observed indoor air contaminant concentration fluctuations at that site.
 
 This paper investigates the sources of the temporal variation in indoor air contaminant concentrations in both the presence and absence of preferential pathways.
-In this work, the latter scenarios are referred to as ”normal” VI scenarios, in which there is typically a groundwater source of the contaminant.
-Specifically, we pose the question of just how much variation in indoor air contaminant concentration may be expected at  such normal  VI  sites vs. those characterized by preferential pathways.
-The conditions required for preferential pathways to become significant contributors to temporal variations in indoor air contaminant concentrations are also explored, and the consequences for sampling strategies are also discussed.
+In this work, the latter scenarios are referred to as “normal” VI scenarios, in which there is typically a groundwater source of the contaminant.
+Specifically, we pose the question of just how much variation in indoor air contaminant concentration may be expected at such normal VI sites vs. those characterized by preferential pathways within the soil beneath the site.
+The conditions required for preferential pathways to become significant contributors to temporal variations in indoor air contaminant concentrations are also explored, and the consequences for sampling strategies are discussed.
 
 \section{Methods}
 
 
 \subsection{Statistical Analysis Of Field Data}
 
-To begin to characterize transient behavior in indoor air contaminant concentrations, actual datasets are analyzed to establish common levels of variability at VI sites.
-For this purpose, the datasets from the ASU house in Utah, the EPA Indianapolis site and North Island NAS were chosen for analysis.
-This paper relies on statistical analysis of published field data, and readers are referred to the original works for details regarding data acquisition\cite{holton_evaluation_2015,guo_vapor_2015,holton_temporal_2013,hosangadi_high-frequency_2017,u.s._environmental_protection_agency_assessment_2015}. \par
+To frame the question of just how much variability in indoor air contaminant concentrations is actually seen, field datasets have been analyzed.
+For this purpose, datasets from the ASU house in Utah, the EPA Indianapolis site and North Island NAS were chosen for analysis.
+Readers are referred to the original published works for details regarding data acquisition\cite{holton_evaluation_2015,guo_vapor_2015,holton_temporal_2013,hosangadi_high-frequency_2017,u.s._environmental_protection_agency_assessment_2015}.
 
-The ASU house data were obtained over a period of a few years.
-During part of this time, controlled pressure method (CPM) tests were being conducted, in which the house was underpressurized to an extent greater than that characterizing “normal” operation.
-This caused greater than normal advective flow from the subsurface into the house, thus increasing VI potential\cite{mchugh_evaluation_2012,mchugh_recent_2017,holton_evaluation_2015}.
-This period of CPM testing is thus excluded from the otherwise ”natural” VI conditions in the analysis.
-Likewise, the existence of a preferential pathway at the ASU house needs to be considered in examining the dataset, noting that during some of the testing, this pathway was deliberately cut off, resulting in what we have termed “normal” VI conditions in which the main source of contaminant was believed to be groundwater. \par
+The ASU house data were obtained over a period of several years.
+During part of this time, controlled pressure method (CPM) tests were being conducted, in which the house was underpressurized to an extent greater than that characterizing “normal” house operation thus increasing VI potential\cite{mchugh_evaluation_2012,mchugh_recent_2017,holton_evaluation_2015}.
+The period of CPM testing is thus excluded from the analysis.
+Likewise, the existence of a preferential pathway at the ASU house needs to be considered in examining that dataset; during some of the testing at that site, this pathway was cut off, resulting in “normal” VI conditions in which the main source of contaminant was diffusion of contaminant vapor from an underlying groundwater source.
 
-The NAS North Island dataset has not (as far as is known) been influenced by a preferential pathway, but the structure there was subject to large internal pressure fluctuations, much more extensive than those typically recorded at the ASU house during normal operations.
-Additionally, the underlying soil at NAS North Island is sandy and more permeable than that at the ASU site, which, as will be shown, contributes to the indoor air contaminant concentrations being more sensitive to pressure fluctuations\cite{hosangadi_high-frequency_2017}. \par
+The NAS North Island dataset has not (as far as is known) been influenced by a preferential pathway, but the structure there was subject to “large” internal pressure fluctuations.
+By “large” is meant still only of order 10-20 Pa, but these were greater than those generally recorded at the ASU house during normal operations.
+The underlying soil at NAS North Island is sandy\cite{hosangadi_high-frequency_2017} and more permeable than that at the ASU site, which will be shown to lead to greater pressure sensitivity in the former case.
 
-Likewise, the Indianapolis site investigation spanned a number of years and periodically included the testing of a sub-slab depressurziation system (SSD).
-The goal of the SSD testing was to mitigate the VI risk by drastically depressurizing the sub-slab area underneath the house, preventing the contaminants from entering the structure above.
+The Indianapolis site investigation also spanned a number of years and periodically included the testing of a sub-slab depressurziation system (SSD) for VI mitigation.
 Only the period before the installation of this system was considered in the present analysis.
-It is likely a sewer line beneath the structure acted as a preferential pathway\cite{mchugh_evidence_2017}, however at no point was this preferential pathway removed, making it difficult to assess how significant the role of the preferential pathway was at this site.
-Regardless of this it is of interest to consider the data from this site due to how extensive and complete the data collection was. \par
+It is likely a sewer line beneath the structure acted as a preferential pathway\cite{mchugh_evidence_2017}.
+Unlike at the ASU house, this preferential pathway was never removed or blocked, making it impossible to isolate the role of the preferential pathway at this site.
+It is still of interest to consider the data from this site because of the completeness and extensiveness of the data collection.
 
-Much of the analysis relies on an probability density estimation technique called "kernel density estimation",
-KDE is a technique that estimates the probability distribution of a random variable(s) by using multiple kernels, or weighting functions, and in this case, Gaussian kernels are used to create the KDEs.
-This means that it is presumed that the variables of interest (i.e., indoor air contaminant concentrations and indoor-outdoor pressure differentials, as sampled) are normally distributed around mean values (and that there are statistical fluctuations associated with each sampling event).
-In this instance, the scipy statistical package was used to construct the KDEs, assuming a bandwidth parameter determined by Scott's rule.
-The numpy, scipy, and pandas python packages were also used to conduct all statistical analysis and processing, with plotting done by the matplotlib, seaborn packages. % TODO: Add references to the
+Some of the analysis of the above three field data sets relies on a probability density estimation technique called ”kernel density estimation” (KDE).
+KDE is a technique used for estimating the probability distribution of a random variable(s) by using multiple kernels, or weighting functions to characterize the data sets.
+In this case, Gaussian kernels are used to create the KDEs.
+This means that it is presumed that the variables of interest (i.e., indoor air contaminant concentrations and indoor-outdoor pressure differentials, as sampled) are normally distributed around mean values and that there are statistical fluctuations associated with each sampling event.
+In this instance, the scipy statistical package was used to construct the KDEs, assuming a bandwidth parameter determined by Scott’s rue.
+The numpy, scipy, and pandas python packages were also used to conduct all statistical analysis and processing, with plotting done by the matplotlib, seaborn packages. % TODO: Add references to the packages
+
 
 \subsection{Modeling Work}
 
