--- a/tex/main.tex
+++ b/tex/main.tex
@@ -289,7 +289,7 @@ We hypothesize that this is largely due to fluctuations in air exchange rate, wh
 
 \begin{figure}[htb!]
   \centering
-  \caption{Maximum change in indoor air contaminant concentration that may be expected over a given time period. (1D is 1 day, 2W is 2 weeks, and 3M is 3 months).}
+  \caption{Maximum change in indoor air contaminant concentration that may be expected over a given time period. (1D is 1 day, 2W is 2 weeks, and 3M is 3 months). The error bars are the 95\% confidence intervals.}
   \label{fig:resampling}
   \includegraphics[width=\textwidth]{temporal_variability/resampling.pdf}
 \end{figure}
